--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,4 +20,11 @@
   {{ $style := $sass | css.Sass $options | resources.Fingerprint "sha512" }}
   <link rel="stylesheet" href="{{ $style.Permalink | relURL }}" integrity="{{ $style.Data.Integrity }}" />
   {{ if .Params.mathjax }} {{ partial "mathjax.html" . }} {{ end }}
+
+  {{ if and (.Site.Params.adsense.enable) (not .Params.disableAds) }}
+      <!-- Google AdSense Code -->
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client={{ .Site.Params.adsense.client_id }}"
+        crossorigin="anonymous"></script>
+  {{ end }}
+
 </head>
