feat: revise theme

--- a/layouts/shortcodes/random_redirect.html
+++ b/layouts/shortcodes/random_redirect.html
@@ -7,7 +7,7 @@ const posts = [
 if (posts.length > 0) {
     window.location.href = posts[Math.floor(Math.random() * posts.length)];
 } else {
-    document.write('<p>没有可用文章</p>');
+    document.write('<p>No articles available</p>');
 }
 </script>
 
