--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -121,14 +121,14 @@ table, th, td {
 
 
 code {
-  font-family: 'Fira Code', monospace;  /* 更适合代码的字体 */
-  background-color: #1e1f1e;            /* 深灰背景 */
-  color: #f8f8f2;                       /* 浅色文本 */
-  padding: 1em;                         /* 块级内边距 */
-  border-radius: 5px;                   /* 圆角 */
-  display: block;                       /* 块级显示（多行代码） */
-  overflow-x: auto;                     /* 横向滚动（长代码） */
-  line-height: 1.5;                     /* 行高 */
+  font-family: 'Fira Code', monospace;  
+  background-color: #1e1f1e;            
+  color: #f8f8f2;                       
+  padding: 1em;                         
+  border-radius: 5px;                   
+  display: block;                       
+  overflow-x: auto;                     
+  line-height: 1.5;                     
   font-size: 12px;
 }
 
@@ -206,29 +206,29 @@ details[open] summary {
 
 
 .random-button {
-  background-color: #ff4444;  /* 红色背景 */
-  color: white;               /* 白色文字 */
-  border: none;               /* 无边框 */
-  border-radius: 10px;        /* 圆角 */
-  padding: 10px 10px;         /* 内边距 */
-  font-size: 14px;            /* 字体大小 */
-  cursor: pointer;            /* 鼠标指针 */
+  background-color: #ff4444;  
+  color: white;               
+  border: none;               
+  border-radius: 10px;        
+  padding: 10px 10px;         
+  font-size: 14px;            
+  cursor: pointer;            
 }
 
 .random-button:hover {
-  background-color: #cc0000;  /* 悬停时深红色 */
+  background-color: #cc0000;  
 }
 
-/* 弹性布局确保同行显示 */
+
 .site-title {
     display: flex;
     align-items: center;
     gap: 0.5rem;
 }
 
-/* 控制图标与文字对齐 */
+
 .site-icon img {
-    height: 2.5em;  /* 随字体大小缩放 */
+    height: 2.5em;  
     width: auto;
     vertical-align: middle;
 }
